# caching-plan-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
apc_cache/: __init__.py  alert_rules.yml  config.py  fingerprint.py  grafana_dashboard.json  graph.py  main.py  metrics.py  normalize.py
apc_cache/cache/: __init__.py  eviction.py  eviction_lua.py  lookup.py  template_gen.py
apc_cache/decision_log/: __init__.py  models.py  writer.py
apc_cache/keyword/: __init__.py  candidates.py  embedding.py  keyword_index.py  kw_cache.py  llm_normalize.py  multilang.py  sanitize.py  types.py
apc_cache/ops/: __init__.py  alias_cli.py  reindex.py  snapshot.py
plan/: draft.md  pv1.md  v1.md  v2.md  v3.md  v4.md  v5.md
test/: README.md  __init__.py  conftest.py
test/e2e/: __init__.py  test_api.py  test_graph_workflow.py
test/integration/: __init__.py  test_cache_eviction.py  test_cache_lookup.py  test_keyword_index.py  test_template_gen.py
test/unit/: __init__.py  test_candidates.py  test_config.py  test_fingerprint.py  test_kw_cache.py  test_llm_normalize.py  test_metrics.py  test_multilang.py  test_normalize.py  test_sanitize.py  test_template_gen_helpers.py  test_types.py
