[project]
name = "apc-cache"
version = "0.1.0"
description = "APC Keyword Cache Subsystem — three-layer cache funnel for agent plan caching"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis[hiredis]>=5.0.0",
    "langgraph>=0.2.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
